# ragger

./: .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.md  pyproject.toml
config/: demonic-pacts.yaml
docs/api/: ACTION.md  DIALOGUE.md  ENUMS.md  MAP.md  (+2 more)
plugin/: build.gradle  run.sh
scripts/: classify_game_vars.py  compute_walkability.py  fetch_activities.py  fetch_agility_actions.py  fetch_all.py  fetch_charter_ships.py  fetch_diary_items.py  fetch_diary_tasks.py  fetch_dungeon_entrances.py  fetch_equipment.py  fetch_facilities.py  fetch_fairy_rings.py  fetch_farming_actions.py  fetch_firemaking.py  fetch_firemaking_actions.py  fetch_fishing.py  fetch_fishing_actions.py  fetch_hunter_actions.py  fetch_items.py  fetch_league_tasks.py  fetch_locations.py  fetch_magic_teleports.py  fetch_map_links.py  fetch_mining.py  fetch_mining_actions.py  fetch_monsters.py  fetch_npcs.py  fetch_prayer_actions.py  fetch_quest_regions.py  fetch_quests.py  fetch_quetzal.py  fetch_recipes.py  fetch_shops.py  fetch_teleports.py  fetch_thieving_actions.py  fetch_woodcutting_actions.py  import_map_squares.py  link_activity_locations.py  link_facilities.py  link_shop_locations.py  (+1 more)
tests/: conftest.py  test_account.py  test_activity.py  test_combat.py  test_dialogue.py  test_dialogue_entity_links.py  test_dialogue_parser.py  test_dialogue_passes.py  test_dialogue_wikitext.py  test_diary.py  test_facility.py  test_item.py  test_league.py  test_league_config.py  test_location.py  test_map.py  test_monster.py  test_npc.py  test_quest.py  test_requirements.py  test_shop.py  test_wiki.py
(+194 files in other folders)
